# Picnic

./: CMakeLists.txt  README.md  kats_test.c  picnic_impl.c
sha3/: CMakeLists.txt
